[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/slime_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Player/PlayerFSM.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 3 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitboxes/MeleeAttack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitboxes/MeleeAttack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 13, 9 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 18, 9 )

[node name="Player" type="KinematicBody2D" groups=["Players"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( 0, -23 )
texture = ExtResource( 2 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="DamageImmunityTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Hitboxes" type="Node2D" parent="."]

[node name="HurtBox" type="Area2D" parent="Hitboxes"]
position = Vector2( 0, -10 )
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitboxes/HurtBox"]
position = Vector2( 0, 1 )
shape = SubResource( 8 )

[node name="MeleeAttack" type="Area2D" parent="Hitboxes"]
position = Vector2( 15, -9 )
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitboxes/MeleeAttack"]
position = Vector2( -3, 0 )
shape = SubResource( 7 )
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hitboxes/HurtBox" to="." method="_on_HurtBox_area_entered"]
